<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/venuePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/imgDescr"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/ratingSample"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/venueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/rating"
        android:layout_toRightOf="@id/venuePhoto"
        android:text="@string/VenueNameSample"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/streetAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/venueName"
        android:layout_toLeftOf="@id/rating"
        android:layout_toRightOf="@id/venuePhoto"

        android:text="@string/addressSample"
        android:textSize="20sp" />


</RelativeLayout>